src/test/ui/parser/issue-68987-unmatch-issue-3.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-68987-unmatch-issue-3.rs:4:19
   |
LL |     while cnt < j {
   |                   ^ unclosed delimiter
LL |         write!&mut res, " ");
   |                            ^ mismatched closing delimiter

error: unexpected closing delimiter: `}`
  --> $DIR/issue-68987-unmatch-issue-3.rs:7:1
   |
LL | fn f(i: u32, j: u32) {
   |                      - this delimiter might not be properly closed...
...
LL |     }
   |     - ...as it matches this but it has different indentation
LL | }
   | ^ unexpected closing delimiter

error: aborting due to 2 previous errors

